# clinto

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  deploy-pypi.yml
clinto/: argparse_parser.py  argparse_specs.py  base_parser.py  click_parser.py  parser.py  utils.py  version.py
clinto/ast/: codegen.py  source_parser.py
clinto/parsers/: __init__.py  argparse.py  argparse_.py  base.py  compat.py  constants.py  docopt_.py
clinto/tests/: factories.py  test_fields.py  test_parsers.py
clinto/tests/argparse_scripts/: choices.py  error_script.py  function_argtype.py  mutually_exclusive.py  subparser_script.py
clinto/tests/click_scripts/: click_script.py
clinto/tests/docopt_scripts/: naval_fate.py
