[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clinto"
version = "0.5.1rc1"
description = "Clinto"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Chris Mitchell", email = "chris.mit7@gmail.com" },
]
dependencies = [
    "astor",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/wooey/clinto"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["clinto*"]

[tool.setuptools.package-data]
"clinto.tests" = [
    "argparse_scripts/*.py",
    "argparse_scripts/*.zip",
    "docopt_scripts/*.py",
]

[tool.bumpversion]
current_version = "0.5.1rc1"
commit = true
tag = true
tag_name = "v{new_version}"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(rc(?P<rc>\d+))?'
serialize = [
    "{major}.{minor}.{patch}rc{rc}",
    "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.rc]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = """
[project]
name = "clinto"
version = "{current_version}"
description = "Clinto"
"""
replace = """
[project]
name = "clinto"
version = "{new_version}"
description = "Clinto"
"""

[tool.ruff]
exclude = [".git", ".tox", "__pycache__", "build", "dist"]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E111",
    "E114",
    "E203",
    "E231",
    "E265",
    "E501",
    "E731",
    "F841",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
